--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@react-navigation/native-stack": "^6.6.1",
+    "expo": "^44.0.0",
     "expo-calendar": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-calendars": "^1.1282.0",
+    "react-native-calendars": "^1.1275.0",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-web": "0.17.1"
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
