--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-firebase/app": "^14.9.3",
+    "@react-native-firebase/auth": "^14.9.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "^44.0.0",
+    "expo": "^45.0.4",
     "expo-calendar": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
