--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "expo": "^44.0.0",
     "expo-calendar": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
