--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "^45.0.4",
+    "expo-random": "~12.0.1",
     "expo-calendar": "~10.1.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.11",
+    "expo-auth-session": "~3.4.2",
+    "expo-web-browser": "~10.0.3",
+    "firebase": "^9.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "0.68.2",
     "react-native-calendars": "^1.1275.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
