--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-google-signin/google-signin": "react-native-google-signin/google-signin",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "expo": "^45.0.4",
-    "expo-random": "~12.0.1",
+    "expo-auth-session": "~3.4.2",
     "expo-calendar": "~10.1.0",
+    "expo-dev-client": "~0.9.6",
+    "expo-random": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
-    "moment": "^2.29.3",
-    "expo-auth-session": "~3.4.2",
     "expo-web-browser": "~10.0.3",
-    "firebase": "^9.8.1",
+    "firebase": "9.6.11",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.68.2",
     "react-native-calendars": "^1.1275.0",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
