autenticação google funcionando

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "nursing-diary",
     "slug": "nursing-diary",
+    "scheme": "nursing-diary",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
