--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-auth-session": "~3.4.2",
     "expo-calendar": "~10.1.0",
     "expo-dev-client": "~0.9.6",
+    "expo-notifications": "~0.15.2",
     "expo-random": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
